2002-06-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* opp_makemake.in (doxyconf): new variable; names the doxygen
	configuration file
	(nedfiles): new variable, holds all ned files including those in
	sub-directories
	(neddoc.html): new Makefile target for NED documentation
	generation. Creates neddoc.html
	(htmldoc): new Makefile target for C++ code documentation
	generation. Docu is placed into ./html sub-directory
	(doc): new Makefile target that calls target neddoc.html and
	htmldoc
	(): various code for NED file collection; exludes NED files that
	contain experimental subclassing ("//--subclassing--")

	* opp_neddoc.in: use OMNETPP_UTILS_DIR as path to
	neddoc.xsl. Added signal traps and a cleanup() function

2002-06-10  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* Makefile.in (all): copy opp_neddoc to bin dir.

	* opp_neddoc.in (NEDDOC_XSL): use OMNETPP_UTILS_DIR as path to
	neddoc.xsl

2002-07-07  Andras Varga

	* added NED documentation tool (neddoc.xsl, opp_neddoc, 
	opp_neddoc.cmd)

2002-05-04  ------ omnetpp-2.2 released ------

2002-04-06  Andras Varga

	* opp_test added (moved here from test/); makefile installs it into bin/
        * makedep.pl renamed to opp_makedep and made a standalone program;
        makefile installs it into bin/

2002-04-02  Ulrich Kaage <kaage@int.uni-karlsruhe.de>  <kaage@int.etec.uni-karlsruhe.de>

	* opp_makemake.in (): when parsing option -u: use brackets around
	tr groups

2002-03-03  Andras Varga

	* opp_makemake: added -L option; removed Makefile.in from the depend
        target. [patch by Johnny Lai]

2002-01-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* opp_makemake.in (clean): remove also *_n.h files.

2001-10-18  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* opp_makemake.in: introduced NEDCFLAGS and NEDCOPTS so that
	compile flag -Wno-unused can be used for compiling _n.cc files
	only. NEDCFLAGS is defined in configure.in and set in
	configure.user in the top level directory.

2001-08-28  Andras Varga 