@@ -1,3 +1,9 @@
+2002-06-12  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* opp_makemake.in (htmldocs): Target htmldoc renamed to
+	htmldocs. Now, creates directory htmldoc instead of html
+	(clean): remove automatically generated documentation
+	
 2002-06-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* opp_makemake.in (doxyconf): new variable; names the doxygen
